@@ -63,6 +63,8 @@
     to Marcel Bosling for the patch. Disabled by default, to enable pass
     -DENABLE_HTTP_STREAM_PLAYBACK=ON to cmake.
 41. Fix Qt5 segfault on exit, due to static QIcons being destructed.
+42. Work-around Qt5 bug where toolbuttons (usually with menus) stay in the
+    mouse-over state.
 
 1.0.3
 -----
